# prompt_crew

./: README.md  migrated
ai-multiomic-literature-bot/: .gitignore
stem_biology_crew/: README.md  pyproject.toml
stem_biology_crew/src/stem_biology_crew/: crew.py  main.py
stem_biology_crew/src/stem_biology_crew/config/: agents.yaml  tasks.yaml
