[project]
name = "stem_biology_crew"
version = "0.1.0"
description = "STEM_Biology_CREW using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.95.0,<1.0.0"
]

[project.scripts]
stem_biology_crew = "stem_biology_crew.main:run"
run_crew = "stem_biology_crew.main:run"
train = "stem_biology_crew.main:train"
replay = "stem_biology_crew.main:replay"
test = "stem_biology_crew.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
